--- a/src/app/components/normal-mode/pages/contact/contact.component.scss
+++ b/src/app/components/normal-mode/pages/contact/contact.component.scss
@@ -9,7 +9,7 @@ a {
 }
 
 .card {
-    margin:15vh 0 40vh 0;
+    margin-top:5vh;
     @media (max-width:$mobile){
         width:90vw;
     }
