--- a/src/app/components/normal-mode/pages/projects/projects.component.scss
+++ b/src/app/components/normal-mode/pages/projects/projects.component.scss
@@ -2,9 +2,10 @@
 
 .cards-wrapper {
     display:grid;
-    grid-template-columns: 2fr 2fr;
+    grid-template-columns: 2fr 2fr 2fr;
     grid-auto-rows: auto;
     grid-gap: 25px;
+    margin-top:5vh;
 }
 
 .repo-card {
